1) Removing commented out code 2) fix bug where clicking on event list item doesn't display popup 3) Changing z-index so that popup shows up over icons on map 4) Showing location in popup

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -89,7 +89,6 @@ hr {
     height: 35px;
     width: 35px;
     border: 1px solid #ddd;
-    border-radius: 50%;
     box-shadow: 0px 0px 5px #000000;
   }
 
@@ -172,6 +171,7 @@ hr {
 .event-hover {
   border: 0px;
   background-color: $light-grey;
+  z-index: 14;
   @include event-style;
 
   &:focus {
@@ -183,6 +183,7 @@ hr {
   height: 20px;
   width: 20px;
   position: relative;
+  z-index: 13;
 }
 
 .popup-icon {
@@ -262,7 +263,8 @@ hr {
   box-shadow: 0 0 8px 2px #888;
   color: black;
   padding: 5px;
-  width: 250px;
+  position: relative;
+  width: 350px;
   z-index: 15;
   @include flex-box;
   @include flex-column;
